--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
 
+:focus {
+  outline: solid 3px #5b9dd9;
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -37,7 +41,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #maincontent {
   background-color: #f3f3f3;
-  min-height: 100%;
+  display: flex;
+  width: 100%;
+  height: calc(100vh - 146px);
 }
 #footer {
   background-color: #444;
@@ -98,22 +104,35 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
+#map-container {
+  width: 65%;
+}
+
 #map {
-  height: 400px;
+  height: 100%;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
+#sidePanel {
+  width: 35%;  
+}
+
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  height: 100%;
+  /* background-color: #3397DB; */
+  background-color: rgb(169, 193, 214);
+  /* background-color: rgba(169, 193, 214, 0.85); */
   align-items: center;
+  overflow-y: auto;
 }
 .filter-options h2 {
-  color: white;
+  padding-top: 10px;
+  color: rgba(0, 0, 0, 0.85);
+  color: rgba(0, 0, 0, 0.85);
   font-size: 1rem;
-  font-weight: normal;
+  font-weight: 600;
   line-height: 1;
   margin: 0 20px;
 }
@@ -128,7 +147,11 @@ nav h1 a {
   padding: 0 10px;
   width: 200px;
 }
-
+/* .filter-options select:focus {
+  border-width: 2px;
+  border-style: solid;
+  border-color: red;  
+} */
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
@@ -145,15 +168,18 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: 80%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
-  max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  width: 100%;
+  /* max-width: 100%; */
+  /*min-height: 248px;*/
+  /* min-width: 100%; */
+  margin-top: 1.8rem;
+  height: auto;
 }
 #restaurants-list li h1 {
   color: #f18200;
