--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
+* {
+  box-sizing: border-box;
+}
 
 :focus {
   outline: solid 3px #5b9dd9;
@@ -116,21 +119,19 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 #sidePanel {
-  width: 35%;  
+  width: 35%;
 }
 
 .filter-options {
   width: 100%;
   height: 100%;
-  /* background-color: #3397DB; */
   background-color: rgb(169, 193, 214);
-  /* background-color: rgba(169, 193, 214, 0.85); */
   align-items: center;
   overflow-y: auto;
 }
 .filter-options h2 {
   padding-top: 10px;
-  color: rgba(0, 0, 0, 0.85);
+  color: rgb(0, 0, 0);
   color: rgba(0, 0, 0, 0.85);
   font-size: 1rem;
   font-weight: 600;
@@ -148,38 +149,30 @@ nav h1 a {
   padding: 0 10px;
   width: 200px;
 }
-/* .filter-options select:focus {
-  border-width: 2px;
-  border-style: solid;
-  border-color: red;  
-} */
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 25px;
   text-align: center;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  margin: 0 0 20px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 25px;
   text-align: left;
-  width: 80%;
+  width: 100%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   width: 100%;
-  /* max-width: 100%; */
-  /*min-height: 248px;*/
-  /* min-width: 100%; */
-  margin-top: 1.8rem;
+  margin-top: 0;
   height: auto;
 }
 #restaurants-list li h1 {
