--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,14 @@ nav h1 a {
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
+.insideNav {
+  width: unset;
+  height: unset;
+  background-color: unset;
+  text-align: unset;
+}
+
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
