Rename css class used for teh breadcrumb

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ nav h1 a {
   text-transform: uppercase;
 }
 
-.insideNav {
+.inside-nav {
   width: unset;
   height: unset;
   background-color: unset;
