--- a/css/styles.css
+++ b/css/styles.css
@@ -317,3 +317,32 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
+@media screen and (max-width: 580px) {
+  #map {
+    border-top: #5b9dd9 2px solid;
+  }
+
+  #maincontent {
+    flex-direction: column;
+  }
+
+  #sidePanel {
+    width: 100%;
+    height: 60%;
+  }
+
+  #map-container {
+    width: 100%;
+    height: 40%;
+  }
+
+  .inside #restaurantSidePanel {
+    width: 100%;
+    height: 60%;
+  }
+
+  .filter-options select {
+    width: unset;
+  }
+}
